--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -71,7 +71,7 @@
     <ClCompile Include="utils\Timer\FPSTimer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="render\Graphics\shaders\PS.hlsl">
+    <FxCompile Include="render\Graphics\shaders\Voronoi.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
