--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -230,7 +230,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include;$(SolutionDir)\lib\assimp\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -247,7 +247,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include;$(SolutionDir)\lib\assimp\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -264,7 +264,7 @@
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include;$(SolutionDir)\lib\assimp\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -281,7 +281,7 @@
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib;$(SolutionDir)\lib\spdlog\include;$(SolutionDir)\engine;$(SolutionDir)\engine\include;$(SolutionDir)\lib\assimp\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
