--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -27,7 +27,7 @@
     <ClInclude Include="render\Graphics\EngineCamera.hpp" />
     <ClInclude Include="render\Graphics\CBStructs.hpp" />
     <ClInclude Include="render\Graphics\ConstantBuffer.hpp" />
-    <ClInclude Include="render\Graphics\Graphics.hpp" />
+    <ClInclude Include="render\Graphics\Renderer.hpp" />
     <ClInclude Include="include\win_def.hpp" />
     <ClInclude Include="include\win_undef.hpp" />
     <ClInclude Include="render\D3D\d3d.hpp" />
@@ -37,7 +37,7 @@
     <ClInclude Include="render\Graphics\Vertex.hpp" />
     <ClInclude Include="render\Graphics\VertexBuffer.hpp" />
     <ClInclude Include="render\Graphics\VertexShader.hpp" />
-    <ClInclude Include="render\Instances\Model.hpp" />
+    <ClInclude Include="render\Objects\Model.hpp" />
     <ClInclude Include="render\RayTracer\Camera\Camera.h" />
     <ClInclude Include="render\RayTracer\Lighting\Lights.h" />
     <ClInclude Include="render\RayTracer\Materials\Material.h" />
@@ -73,11 +73,13 @@
     <ClCompile Include="render\Graphics\IndexBuffer.cpp" />
     <ClCompile Include="render\Graphics\PixelShader.cpp" />
     <ClCompile Include="render\Graphics\VertexShader.cpp" />
+    <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="render\Objects\Model.cpp" />
     <ClCompile Include="render\RayTracer\Camera\Camera.cpp" />
     <ClCompile Include="render\RayTracer\Lighting\Lights.cpp" />
     <ClCompile Include="render\RayTracer\RenderObject\RenderObject.cpp" />
     <ClCompile Include="render\RayTracer\Scene\Scene.cpp" />
-    <ClCompile Include="render\Graphics\Graphics.cpp" />
+    <ClCompile Include="render\Graphics\Renderer.cpp" />
     <ClCompile Include="render\RayTracer\draggers\dragger.cpp" />
     <ClCompile Include="render\RayTracer\math\geometry\plane.cpp" />
     <ClCompile Include="render\RayTracer\math\geometry\sphere.cpp" />
